<resources>
    <string name="app_name">COVID-19</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Covid-19</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_about">About</string>
    <string name="info">Info</string>
    <string name="menu_home">Home</string>
    <string name="menu_symptoms">Symptoms</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="call_helpline">Call Helpline</string>
    <string name="communicate">Communicate</string>
    <string name="updates">Updates</string>
    <string name="causes">Causes</string>
    <string name="start_here">Start Here!</string>
    <string name="stay_safe">Stay SAFE!</string>
    <string name="covis_19_info">Coronavirus disease (COVID-19) is an infectious disease caused by a newly discovered coronavirus.

Most people infected with the COVID-19 virus will experience mild to moderate respiratory illness and recover without requiring special treatment.  Older people, and those with underlying medical problems like cardiovascular disease, diabetes, chronic respiratory disease, and cancer are more likely to develop serious illness.

The best way to prevent and slow down transmission is be well informed about the COVID-19 virus, the disease it causes and how it spreads. Protect yourself and others from infection by washing your hands or using an alcohol based rub frequently and not touching your face.

The COVID-19 virus spreads primarily through droplets of saliva or discharge from the nose when an infected person coughs or sneezes, so it’s important that you also practice respiratory etiquette (for example, by coughing into a flexed elbow).

At this time, there are no specific vaccines or treatments for COVID-19. However, there are many ongoing clinical trials evaluating potential treatments.</string>
    <string name="info_covid">Coronaviruses are a large family of viruses which may cause illness in animals or humans. In humans, several coronaviruses are known to cause respiratory infections ranging from the common cold to more severe diseases such as Middle East Respiratory Syndrome(MERS) and Severe Acute Respiraatory Syndrome(SARS). The most recently discovered coronavirus discovered causes the disease COVID-19.</string>
    <string name="coronavirus">CoronaVirus</string>
    <string name="created_with_love_by">CREATED WITH LOVE BY</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="syp">Most common symptoms:
        • fever
        • dry cough
        • tiredness</string>
    <string name="sudp">Seek immediate medical attention if you have serious symptoms. Always call before visiting your doctor or health facility. People with mild symptoms who are otherwise healthy should manage their symptoms at home. On average it takes 5–6 days from when someone is infected with the virus for symptoms to show, however it can take up to 14 days.</string>
    <string name="sup">COVID-19 affects different people in different ways. Most infected people will develop mild to moderate illness and recover without hospitalization.</string>
    <string name="prevention">Prevention</string>
</resources>
