<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.test.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_info"
        android:name="com.example.test.ui.info.InfoFragment"
        android:label="@string/info"
        tools:layout="@layout/fragment_info" />

    <fragment
        android:id="@+id/nav_symptoms"
        android:name="com.example.test.ui.symptoms.SymptomsFragment"
        android:label="@string/menu_symptoms"
        tools:layout="@layout/fragment_symptoms" />

    <fragment
        android:id="@+id/nav_updates"
        android:name="com.example.test.ui.updates.UpdatesFragment"
        android:label="@string/updates"
        tools:layout="@layout/fragment_updates" />

    <fragment
        android:id="@+id/nav_cause"
        android:name="com.example.test.ui.Cause.CauseFragment"
        android:label="@string/causes"
        tools:layout="@layout/fragment_cause" />

    <fragment
        android:id="@+id/nav_prevention"
        android:name="com.example.test.ui.prevention.PreventionFragment"
        android:label="@string/prevention" />
    <fragment
        android:id="@+id/CreditsFragment"
        android:name="com.example.test.Credits"
        android:label="fragment_credits"
        tools:layout="@layout/fragment_credits" />
</navigation>